--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,23 @@
-# Dependencies
-node_modules/
-*/node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Production builds
-build/
-*/build/
-dist/
-*/dist/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Cache and temporary files
-.cache/
-*/.cache/
-*.log
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-*/.DS_Store
-Thumbs.db
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-.vs/
-
-# Environment files
-.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Testing
-coverage/
-.nyc_output/
-
-# Misc
-*.pid
-*.seed
-*.pid.lock
-.eslintcache
-
-# MacOS
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
